--- a/asset-transfer-basic/application-javascript/package.json
+++ b/asset-transfer-basic/application-javascript/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "startGateway": "node ./bin/www2"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,12 +12,13 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "fabric-ca-client": "^2.2.4",
+    "fabric-common": "latest",
     "fabric-network": "^2.2.4",
     "html": "^1.0.0",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
-    "fabric-common": "latest"
+    "node-fetch": "^2.6.7",
+    "pug": "2.0.0-beta11"
   }
 }
