--- a/asset-transfer-basic/application-javascript/package.json
+++ b/asset-transfer-basic/application-javascript/package.json
@@ -20,5 +20,8 @@
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.7",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0"
   }
 }
